# proplang

./: .gitignore  AGENT_PLAN.md  AGENT_PLAN_REVIEW.md  BRIEF_AUDIT.md  CIRL_PLAN.md  CIRL_REPORT.md  CLAUDE-1.md  CLAUDE.md  EXPFAM_PLAN.md  EXPFAM_REPORT.md  EXTERNAL_REVIEW_RESPONSE.md  GRAMMAR_HYGIENE_PLAN.md  HOSTS_D_PACK.md  HOSTS_H_REPORT.md  HOSTS_PLAN.md  HYGIENE_REPORT.md  LADDER_PLAN.md  LADDER_REPORT.md  LICENSE  MANIFEST.sha256  MEMBRANE_PLAN.md  MEMBRANE_REPORT.md  METAREASONING_PLAN.md  PHASE1_REPORT.md  PHASE2_REPORT.md  PREPOSTERIOR_PLAN.md  PREPOSTERIOR_REPORT.md  README.md  ROADMAP.md  UTILITY_RESEARCH_CROSSAUDIT.md  WRITEUP.md  WRITEUP_PLAN.md  actions-author-pack.md  allowed_signers  boundary-queue.md  brief.md  cabal.project.freeze  cirl-task2-author-pack.md  code-task2-author-pack.md  design.md  (+25 more)
app/: Main.hs
archive/: README.md  interface-1.md  typed-port-spec-1.md  typed-port-spec-3.md
audit/: ablation.sh  belief-exports.txt  capture_oracle.py  check_exports.py  forbidden.txt  run-gates.sh  strip_comments.py
audit/ablation/: UseArgmax.hs  UsePush.hs
host-governor/: Main.hs  Wire.hs  WireU.hs
reviews/: 2026-07-11-author-counsel-decision-sheet.md  2026-07-11-metareasoning-external-review.md
src/PropLang/: Belief.hs  Enumerate.hs  Eval.hs  Host.hs  Membrane.hs  Syntax.hs
test/: Acceptance.hs  Anchors.hs  Properties.hs  Streams.hs
test-actions/: Actions.hs  stanza.cabal.draft
test-cirl/: Cirl.hs  ablation.sh  red-run.sh  sayable.sh  stanza.cabal.draft
test-cirl/ablation/: UseUSay.hs
test-cirl/fixture/: SayableC.hs
test-code/: Code.hs  stanza.cabal.draft
test-d/: D.hs  ablation.sh  red-run.sh  stanza.cabal.draft
test-d/ablation/: UseUPilot.hs  UseUWalk.hs
test-elim/: Elim.hs  stanza.cabal.draft
test-elim/ablation/: UseElimJ.hs  UseExpect.hs  UseSawE.hs  run.sh
test-expfam/: ExpFam.hs  ablation.sh  stanza.cabal.draft
test-expfam/ablation/: UseBern.hs  UseExpFam.hs  UseObsCarrier.hs  UseSId.hs
test-govhost/: GovHost.hs  ablation.sh  red-run.sh  stanza.cabal.draft
test-govhost/ablation/: UseDriver.hs
test-hygiene/: Hygiene.hs  ablation.sh
test-hygiene/ablation/: UseFnInd.hs  UseFnUtil.hs
test-ladder/: Ladder.hs  ablation.sh  red-run.sh  sayable.sh  stanza.cabal.draft
test-ladder/ablation/: UseLadder.hs
test-ladder/fixture/: Sayable.hs
test-membrane/: Membrane.hs  ablation.sh  gen_fixtures.py  no-subscription.txt  red-run.sh  stanza.cabal.draft
test-membrane/ablation/: UseAffordance.hs  UseEcho.hs  UseSlotGrid.hs
test-optlaw/: OptLaw.hs  stanza.cabal.draft
test-outcome/: Outcome.hs  stanza.cabal.draft
test-prepost/: Prepost.hs  ablation.sh  red-run.sh  sayable.sh  stanza.cabal.draft
test-prepost/ablation/: UseVPre.hs
test-prepost/fixture/: SayableP.hs
test-pricing/: Pricing.hs  stanza.cabal.draft
test-reflexive/: Reflexive.hs
test-sentence/: Sentence.hs  stanza.cabal.draft
test-sentence/ablation/: UseCode.hs  UsePos.hs  UseTor.hs  run.sh
test-stream/: Stream.hs  gen_fixtures.py  stanza.cabal.draft
test-unify/: Unify.hs  stanza.cabal.draft
test-writeup/: check.sh
tools/: boundary-audit.sh  prefreeze-lint.sh
