cabal-version:      3.0
name:               proplang
version:            0.1.0.0
synopsis:           proplang (Proposition Language) — typed port, frozen-oracle build
description:
  Haskell typed port of proplang per typed-port-spec.md. Phase 1: src/ are
  signature stubs; test/ and audit/ are the frozen oracle (see CLAUDE.md).
build-type:         Simple
extra-doc-files:    CLAUDE.md
                    design.md
                    interface.md
                    typed-port-spec.md
                    HOSTS_PLAN.md
                    membrane-wire.md

common warnings
    ghc-options: -Wall -Werror -Wincomplete-patterns -Wincomplete-uni-patterns

library
    import:           warnings
    exposed-modules:  PropLang.Belief
                      PropLang.Syntax
                      PropLang.Eval
                      PropLang.Enumerate
                      PropLang.Membrane
                      PropLang.Host
    hs-source-dirs:   src
    -- src depends on base ONLY (frozen-oracle decision: keeps the audit's
    -- `ghc -isrc` ablation compiles package-DB-free)
    build-depends:    base >=4.16 && <5
    default-language: GHC2021

test-suite acceptance
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Acceptance.hs
    other-modules:    Streams
                      Anchors
    hs-source-dirs:   test
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , process
    default-language: GHC2021

test-suite properties
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Properties.hs
    hs-source-dirs:   test
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-quickcheck
                    , QuickCheck
    default-language: GHC2021

-- The grammar-hygiene increment oracle (GRAMMAR_HYGIENE_PLAN Q2):
-- frozen test/ cannot grow, so each increment carries its own suite;
-- the frozen gate 5 (`cabal test all`) absorbs it automatically.
test-suite hygiene
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Hygiene.hs
    hs-source-dirs:   test-hygiene
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , process
    default-language: GHC2021

-- The expfam increment oracle (EXPFAM_PLAN E10): stanza drafted by the
-- builder in the oracle phase (test-expfam/stanza.cabal.draft), applied
-- at the Task 2 freeze alongside the manifest re-signing.
test-suite expfam
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ExpFam.hs
    hs-source-dirs:   test-expfam
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , process
    default-language: GHC2021

-- The membrane increment's suite (MEMBRANE_PLAN; drafted in the oracle
-- phase as test-membrane/stanza.cabal.draft, landed at the Task 2
-- freeze). hs-source-dirs includes test/ ONLY for the frozen Streams
-- and Anchors modules — the parity group pins against the same anchor
-- constants the acceptance suite uses.
test-suite membrane
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Membrane.hs
    other-modules:    Streams
                      Anchors
    hs-source-dirs:   test-membrane, test
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , process
    default-language: GHC2021

test-suite ladder
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Ladder.hs
    other-modules:    Streams
                      Anchors
    hs-source-dirs:   test-ladder, test
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , process
    default-language: GHC2021

test-suite prepost
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Prepost.hs
    other-modules:    Streams
    hs-source-dirs:   test-prepost, test
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , process
    default-language: GHC2021

test-suite cirl
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Cirl.hs
    hs-source-dirs:   test-cirl
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , process
    default-language: GHC2021

-- The govhost increment (HOSTS_PLAN boundary H; stanzas drafted in the
-- oracle phase as test-govhost/stanza.cabal.draft, landed at the
-- govhost freeze). The wire driver executable is implementation
-- surface like src/ (ruling H-7: gates, not manifest); the suite
-- reaches it through build-tool-depends.
executable proplang-govhost
    import:           warnings
    main-is:          Main.hs
    other-modules:    Wire
                    , WireU
    hs-source-dirs:   host-governor
    build-depends:    base
                    , proplang
    default-language: GHC2021

test-suite govhost
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          GovHost.hs
    other-modules:    Wire
    hs-source-dirs:   test-govhost, host-governor
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , process
    build-tool-depends: proplang:proplang-govhost
    default-language: GHC2021

test-suite test-d
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          D.hs
  other-modules:    Wire
                  , WireU
  hs-source-dirs:   test-d, host-governor
  build-depends:    base
                  , proplang
                  , tasty
                  , tasty-hunit
                  , process
  build-tool-depends: proplang:proplang-govhost
  default-language: GHC2021

-- the step-1 increment oracle (AGENT_PLAN, boundary agent-boundary-r1);
-- stanza applied at code-freeze-r0 from test-code/stanza.cabal.draft
-- under the recorded delegation (pack sections 3 and 6.10)
test-suite code
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Code.hs
    hs-source-dirs:   test-code
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
    default-language: GHC2021
