cabal-version:      3.0
name:               proplang
version:            0.1.0.0
synopsis:           proplang (Proposition Language) — typed port, frozen-oracle build
description:
  Haskell typed port of proplang per typed-port-spec.md. Phase 1: src/ are
  signature stubs; test/ and audit/ are the frozen oracle (see CLAUDE.md).
build-type:         Simple
extra-doc-files:    CLAUDE.md
                    design.md
                    interface.md
                    typed-port-spec.md
                    HOSTS_PLAN.md
                    membrane-wire.md

common warnings
    ghc-options: -Wall -Werror -Wincomplete-patterns -Wincomplete-uni-patterns

library
    import:           warnings
    exposed-modules:  PropLang.Belief
                      PropLang.Syntax
                      PropLang.Eval
                      PropLang.Enumerate
                      PropLang.Membrane
                      PropLang.Host
    hs-source-dirs:   src
    -- src depends on base ONLY (frozen-oracle decision: keeps the audit's
    -- `ghc -isrc` ablation compiles package-DB-free)
    build-depends:    base >=4.16 && <5
    default-language: GHC2021

test-suite properties
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Properties.hs
    hs-source-dirs:   test
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-quickcheck
                    , QuickCheck
    default-language: GHC2021

-- The grammar-hygiene increment oracle (GRAMMAR_HYGIENE_PLAN Q2):
-- frozen test/ cannot grow, so each increment carries its own suite;
-- the frozen gate 5 (`cabal test all`) absorbs it automatically.
test-suite hygiene
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Hygiene.hs
    hs-source-dirs:   test-hygiene
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , process
    default-language: GHC2021

-- The expfam increment oracle (EXPFAM_PLAN E10): stanza drafted by the
-- builder in the oracle phase (test-expfam/stanza.cabal.draft), applied
-- at the Task 2 freeze alongside the manifest re-signing.
test-suite expfam
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ExpFam.hs
    hs-source-dirs:   test-expfam
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , process
    default-language: GHC2021

-- The membrane increment's suite (MEMBRANE_PLAN; drafted in the oracle
-- phase as test-membrane/stanza.cabal.draft, landed at the Task 2
-- freeze). hs-source-dirs includes test/ ONLY for the frozen Streams
-- and Anchors modules — the parity group pins against the same anchor
-- constants the acceptance suite used (retired at the step-3 freeze;
-- its four deliverables live on in test-sentence/ g1 with lineage
-- headers).
test-suite membrane
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Membrane.hs
    other-modules:    Streams
                      Anchors
    hs-source-dirs:   test-membrane, test
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , process
    default-language: GHC2021

-- (test-ladder RETIRED at the step-5 freeze — the Rung machinery
-- died with the action apparatus; its six pins are listed with
-- destinations in actions-author-pack.md Part I SS3: the VThinkK
-- price and verb/worker identity pins re-homed into test-actions g3
-- until step 9 retires the constructor.)

test-suite prepost
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Prepost.hs
    other-modules:    Streams
    hs-source-dirs:   test-prepost, test
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , process
    default-language: GHC2021

test-suite cirl
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Cirl.hs
    hs-source-dirs:   test-cirl
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , process
    default-language: GHC2021

-- THE HOST-LESS WINDOW (stated at the step-3 freeze, D3 rider 2, here
-- where the host stanzas stood): the govhost executable, its wire
-- modules (host-governor/Wire.hs, WireU.hs), test-govhost, and test-d
-- retired at this boundary — their obligations ported or discharged
-- (sentence-author-pack.md sections 8 and 20). From this freeze until
-- the hosts boundary re-opens (step 5/7), the engine carries NO host
-- driver in-tree; host conformance binds to membrane-wire.md, never
-- to GHC artifacts.

-- the step-1 increment oracle (AGENT_PLAN, boundary agent-boundary-r1);
-- stanza applied at code-freeze-r0 from test-code/stanza.cabal.draft
-- under the recorded delegation (pack sections 3 and 6.10)
test-suite code
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Code.hs
    hs-source-dirs:   test-code
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
    default-language: GHC2021

-- the step-2 increment oracle (AGENT_PLAN section 7 step 2, the
-- optimisation law enforced); stanza applied at the step-2 freeze from
-- test-optlaw/stanza.cabal.draft under the recorded Phase-B delegation
-- (optlaw-author-pack.md sections 5.3 and 8)
test-suite optlaw
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          OptLaw.hs
    hs-source-dirs:   test-optlaw
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
    default-language: GHC2021

-- the step-3 increment oracle (AGENT_PLAN section 7 step 3, a
-- hypothesis becomes a sentence); stanza applied at the step-3 freeze
-- from test-sentence/stanza.cabal.draft under the recorded Phase-B
-- delegation (sentence-author-pack.md sections 20 and 25).
-- hs-source-dirs reaches test/ for the FROZEN Streams and Anchors
-- modules: anchor values are imported from the frozen artifact itself,
-- never copied (R-D20-i).
test-suite sentence
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Sentence.hs
    other-modules:    Streams
                      Anchors
    hs-source-dirs:   test-sentence, test
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , process
    default-language: GHC2021

-- the step-4 increment oracle (AGENT_PLAN section 7 step 4, one
-- pricing mechanism, two declared tables); stanza applied at the
-- step-4 freeze from test-pricing/stanza.cabal.draft under the
-- recorded delegation (pricing-author-pack.md sections 10 and 12)
test-suite pricing
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Pricing.hs
    hs-source-dirs:   test-pricing
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
    default-language: GHC2021

-- the step-5 increment oracle (AGENT_PLAN section 7 step 5, actions
-- become features); stanza applied at the step-5 freeze from
-- test-actions/stanza.cabal.draft under the recorded delegation
-- (actions-author-pack.md sections 13-14). hs-source-dirs reaches
-- test/ for the FROZEN Streams module only.
test-suite actions
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Actions.hs
    other-modules:    Streams
    hs-source-dirs:   test-actions, test
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
    default-language: GHC2021

-- the step-6 increment oracle (AGENT_PLAN section 7 step 6, actions
-- in the feature stream); stanza applied at the step-6 freeze from
-- test-stream/stanza.cabal.draft under the recorded delegation
-- (stream-author-pack.md Part V section 35). hs-source-dirs reaches
-- test/ for the FROZEN Streams module only (the control stream is
-- imported, never re-declared — the probe-discipline clause).
test-suite stream
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Stream.hs
    other-modules:    Streams
    hs-source-dirs:   test-stream, test
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
    default-language: GHC2021

-- the step-7 increment oracle (AGENT_PLAN section 7 step 7, pricing
-- unified / M5 repealed); stanza applied at the step-7 freeze from
-- test-unify/stanza.cabal.draft under the recorded delegation
-- (unify-author-pack.md Part V). Every fixture inline.
test-suite unify
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Unify.hs
    hs-source-dirs:   test-unify
    build-depends:    base
                    , proplang
                    , tasty
                    , tasty-hunit
    default-language: GHC2021

-- THE DRIVER RETURNS (step 7, the host-less window's exit — "no
-- driver returns until 7", actions-author-pack.md:176, discharged
-- here). The executable is PropLang.Host.hostMain: the pure session
-- core behind a line loop; it serves the oracle-phase stub until the
-- step-7 implementation lands serveLine's body.
executable proplang-host
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base
                    , proplang
    default-language: GHC2021
